--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+// TODO: Add multiple themes using a service
+@import "./stylesheets/themes/ligth-theme";
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
