install angular fontawesome & config

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,7 @@
 // TODO: Add multiple themes using a service
 @import "./stylesheets/themes/ligth-theme";
 
-html,
-body {
+html {
   height: 100%;
 }
 body {
