--- a/src/app/pages/auth/signup/signup.component.html
+++ b/src/app/pages/auth/signup/signup.component.html
@@ -1,84 +1,108 @@
-<mat-card>
-  <mat-card-content>
-    <form>
-      <h1>Welcome</h1>
+<section class="container main">
+  <mat-card>
+    <mat-card-content>
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <h1 class="text-center">Welcome</h1>
 
-      <!-- Full name -->
-      <div class="reactive-flex">
-        <mat-form-field class="col-xs-6" appearance="outline">
-          <mat-label>First Name</mat-label>
-          <input type="text" matInput [formControl]="firstName!" placeholder="Ex. Francisco">
-          <mat-error *ngIf="firstName?.hasError('required')">
-            First name is <strong>required</strong>
+        <!-- Full name -->
+        <div class="reactive-flex">
+          <mat-form-field class="col-xs-6" appearance="outline">
+            <mat-label>First Name</mat-label>
+            <input type="text" matInput formControlName="firstName" placeholder="Ex. Francisco">
+            <mat-error *ngIf="firstName?.hasError('required')">
+              First name is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="col-xs-6" appearance="outline">
+            <mat-label>Last Name</mat-label>
+            <input type="text" matInput formControlName="lastName" placeholder="Ex. Ramos">
+            <mat-error *ngIf="lastName?.hasError('required')">
+              Last name is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <!-- Country -->
+        <mat-form-field class="d-block" appearance="outline">
+          <mat-label>Country</mat-label>
+          <input matInput formControlName="country" [matAutocomplete]="autoCountry" aria-label="Country">
+          <mat-error *ngIf="country?.invalid && !country?.hasError('required')">
+            Please select a valid country
+          </mat-error>
+          <mat-error *ngIf="country?.hasError('required')">
+            Country is <strong>required</strong>
+          </mat-error>
+          <mat-autocomplete #autoCountry="matAutocomplete">
+            <mat-option *ngFor="let country of filteredCountries | async" [value]="country.value+'-'+country.name">
+              <span>{{country.value | uppercase}} - {{country.name}}</span>
+            </mat-option>
+          </mat-autocomplete>
+        </mat-form-field>
+
+        <!-- Email -->
+        <mat-form-field class="d-block" appearance="outline">
+          <mat-label>Email</mat-label>
+          <input type="email" matInput formControlName="email" placeholder="Ex. fran@example.com">
+          <mat-error *ngIf="email?.hasError('email') && !email?.hasError('required')">
+            Please enter a valid email address
+          </mat-error>
+          <mat-error *ngIf="email?.hasError('required')">
+            Email is <strong>required</strong>
           </mat-error>
         </mat-form-field>
 
-        <mat-form-field class="col-xs-6" appearance="outline">
-          <mat-label>Last Name</mat-label>
-          <input type="text" matInput [formControl]="lastName!" placeholder="Ex. Ramos">
-          <mat-error *ngIf="lastName?.hasError('required')">
-            Last name is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
+        <!-- Password -->
+        <div formGroupName="passwords">
+          <mat-form-field class="d-block" appearance="outline">
+            <mat-label>Choose a password</mat-label>
+            <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'">
+            <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword"
+              [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+              <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="password?.hasError('minlength') && !password?.hasError('required')">
+              Password must be at least 8 characters long
+            </mat-error>
+            <mat-error *ngIf="password?.hasError('required')">
+              Password is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+
+          <mat-form-field class="d-block" appearance="outline">
+            <mat-label>Confirm your password</mat-label>
+            <input matInput formControlName="passwordConfirm" [type]="hidePasswordConfirm ? 'password' : 'text'">
+            <button mat-icon-button matSuffix type="button" (click)="hidePasswordConfirm = !hidePasswordConfirm"
+              [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePasswordConfirm">
+              <mat-icon>{{hidePasswordConfirm ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="passwordConfirm?.hasError('minlength') && !passwordConfirm?.hasError('required')">
+              Password must be at least 8 characters long
+            </mat-error>
+            <mat-error
+              *ngIf="passwords?.errors?.['match'] && !passwordConfirm?.hasError('minlength') && !passwordConfirm?.hasError('required')">
+              Passwords must match
+            </mat-error>
+            <mat-error *ngIf="passwordConfirm?.hasError('required')">
+              Password is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
+
+        <div class="reactive-flex">
+          <button mat-raised-button color="primary">Sign Up</button>
+          <a mat-button color="accent" [routerLink]="['../', 'login']">
+            Already have an account?
+          </a>
+        </div>
+      </form>
+
+      <h4 class="text-center">or</h4>
+
+      <div class="alt-methods-container">
+        <app-alternatives-auth-methods></app-alternatives-auth-methods>
       </div>
 
-      <!-- Country -->
-      <mat-form-field class="d-block" appearance="outline">
-        <mat-label>Country</mat-label>
-        <input matInput [formControl]="country" [matAutocomplete]="autoCountry" aria-label="Country">
-        <mat-error *ngIf="country?.invalid && !country?.hasError('required')">
-          Please select a valid country
-        </mat-error>
-        <mat-error *ngIf="country?.hasError('required')">
-          Country is <strong>required</strong>
-        </mat-error>
-        <mat-autocomplete #autoCountry="matAutocomplete">
-          <mat-option *ngFor="let country of filteredCountries | async" [value]="country.value+'-'+country.name">
-            <span>{{country.value | uppercase}} - {{country.name}}</span>
-          </mat-option>
-        </mat-autocomplete>
-      </mat-form-field>
-
-      <!-- Email -->
-      <mat-form-field class="d-block" appearance="outline">
-        <mat-label>Email</mat-label>
-        <input type="email" matInput [formControl]="email!" placeholder="Ex. fran@example.com">
-        <mat-error *ngIf="email?.hasError('email') && !email?.hasError('required')">
-          Please enter a valid email address
-        </mat-error>
-        <mat-error *ngIf="email?.hasError('required')">
-          Email is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
-
-      <!-- Password -->
-      <div class="reactive-flex">
-        <mat-form-field class="col-xs-6" appearance="outline">
-          <mat-label>Choose a password</mat-label>
-          <input matInput [formControl]="password" [type]="hidePassword ? 'password' : 'text'">
-          <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword"
-            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
-            <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
-
-        <mat-form-field class="col-xs-6" appearance="outline">
-          <mat-label>Confirm your password</mat-label>
-          <input matInput [formControl]="passwordConfirm" [type]="hidePassword ? 'password' : 'text'">
-          <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword"
-            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
-            <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
-      </div>
-
-      <div class="reactive-flex">
-        <button mat-raised-button color="primary">Sign Up</button>
-        <a mat-button color="accent" [routerLink]="['../', 'login']">
-          Already have an account?
-        </a>
-      </div>
-
-    </form>
-  </mat-card-content>
-</mat-card>
+    </mat-card-content>
+  </mat-card>
+</section>
