DEV-1 reducing scss boilerplate

--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -2,15 +2,15 @@
 
 section {
   &.cta {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
+    min-height: 100vh;
   }
 }
 
-@include screen(xSmall) {
+@include screen(xs) {
   section.cta {
     align-items: center;
   }
