--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -5,34 +5,36 @@
         <h1 class="text-center">Welcome Back</h1>
 
         <!-- Email -->
-        <mat-form-field class="d-block" appearance="outline">
-          <mat-label>Email</mat-label>
-          <input type="email" matInput [formControl]="email" placeholder="Ex. pat@example.com">
-          <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
-            Please enter a valid email address
-          </mat-error>
-          <mat-error *ngIf="email.hasError('required')">
-            Email is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
+        <div class="d-flex flex-dir-col">
+          <mat-form-field class="d-block" appearance="outline">
+            <mat-label>Email</mat-label>
+            <input type="email" matInput [formControl]="email" placeholder="Ex. pat@example.com">
+            <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
+              Please enter a valid email address
+            </mat-error>
+            <mat-error *ngIf="email.hasError('required')">
+              Email is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
 
-        <!-- Password -->
-        <mat-form-field class="d-block" appearance="outline">
-          <mat-label>Password</mat-label>
-          <input matInput [formControl]="password" [type]="hidePassword ? 'password' : 'text'">
-          <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword"
-            [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
-            <fa-icon [icon]="hidePassword ? icons.eyeSlashSolid : icons.eyeSolid"></fa-icon>
-          </button>
-          <mat-error *ngIf="password?.hasError('minlength') && !password?.hasError('required')">
-            Password must be at least 8 characters long
-          </mat-error>
-          <mat-error *ngIf="password?.hasError('required')">
-            Password is <strong>required</strong>
-          </mat-error>
-        </mat-form-field>
+          <!-- Password -->
+          <mat-form-field class="d-block" appearance="outline">
+            <mat-label>Password</mat-label>
+            <input matInput [formControl]="password" [type]="hidePassword ? 'password' : 'text'">
+            <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword"
+              [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
+              <fa-icon [icon]="hidePassword ? icons.eyeSlashSolid : icons.eyeSolid"></fa-icon>
+            </button>
+            <mat-error *ngIf="password?.hasError('minlength') && !password?.hasError('required')">
+              Password must be at least 8 characters long
+            </mat-error>
+            <mat-error *ngIf="password?.hasError('required')">
+              Password is <strong>required</strong>
+            </mat-error>
+          </mat-form-field>
+        </div>
 
-        <div class="action-container">
+        <div class="d-flex flex-dir-col align-items-center">
           <button mat-raised-button color="primary">Login</button>
           <a mat-button color="accent" [routerLink]="['../', 'signup']">
             New here? Sign up
@@ -42,7 +44,7 @@
 
       <h4 class="text-center">or</h4>
 
-      <div class="alt-methods-container">
+      <div class="d-flex flex-dir-col align-items-center">
         <app-alternatives-auth-methods></app-alternatives-auth-methods>
       </div>
 
