--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -1,37 +1,9 @@
 @import "./src/stylesheets/general/responsive.mixins.scss";
 
-.reactive-flex {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.d-block {
-  display: block;
-}
-
-.alt-methods-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.text-center {
-  text-align: center;
-}
-
-@include screen(xSmall) {
+@include screen(xs) {
   .container {
     &.main {
       width: 456px;
-    }
-  }
-  .reactive-flex {
-    flex-direction: row;
-    flex-wrap: wrap;
-
-    .col-xs-6 {
-      width: 50%;
     }
   }
 }
