--- a/src/stylesheets/general/variables.scss
+++ b/src/stylesheets/general/variables.scss
@@ -1,6 +1,6 @@
 $breakpoints: (
-  xSmall: 600px,
-  small: 960px,
-  medium: 1280px,
-  large: 1920px,
+  xs: 600px,
+  sm: 960px,
+  md: 1280px,
+  lg: 1920px,
 );
