--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -8,7 +8,7 @@
         <div class="d-flex flex-dir-col">
           <mat-form-field class="d-block" appearance="outline">
             <mat-label>Email</mat-label>
-            <input type="email" matInput [formControl]="email" placeholder="Ex. pat@example.com">
+            <input type="email" matInput formControlName="email" placeholder="Ex. pat@example.com">
             <mat-error *ngIf="email.hasError('email') && !email.hasError('required')">
               Please enter a valid email address
             </mat-error>
@@ -20,7 +20,7 @@
           <!-- Password -->
           <mat-form-field class="d-block" appearance="outline">
             <mat-label>Password</mat-label>
-            <input matInput [formControl]="password" [type]="hidePassword ? 'password' : 'text'">
+            <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'">
             <button mat-icon-button matSuffix type="button" (click)="hidePassword = !hidePassword"
               [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
               <fa-icon [icon]="hidePassword ? icons.eyeSlashSolid : icons.eyeSolid"></fa-icon>
@@ -34,7 +34,7 @@
           </mat-form-field>
         </div>
 
-        <div class="d-flex flex-dir-col align-items-center">
+        <div class="d-flex flex-dir-col flex-dir-xs-row justify-content-center align-items-center">
           <button mat-raised-button color="primary">Login</button>
           <a mat-button color="accent" [routerLink]="['../', 'signup']">
             New here? Sign up
