fix navbar search placeholder & error message

--- a/src/app/components/core/navbar/navbar.component.html
+++ b/src/app/components/core/navbar/navbar.component.html
@@ -23,9 +23,9 @@
 <mat-toolbar class="custom-toolbar justify-content-center" [ngClass]="{show:showSearch}">
   <form [formGroup]="searchForm" class="col-12 col-xs-8 col-sm-6">
     <mat-form-field class="search-input mt-5 col-12" appearance="outline">
-      <input formControlName="search" matInput placeholder="Placeholder">
+      <input formControlName="search" matInput placeholder="Search">
       <button mat-icon-button matSuffix><fa-icon [icon]="icons.magnifyingGlass"></fa-icon></button>
-      <mat-error>Try <b>TSM</b> or <b>ImperialHal</b></mat-error>
+      <mat-error>Try typing <b>TSM</b> or <b>Apex Legends</b></mat-error>
     </mat-form-field>
   </form>
 </mat-toolbar>
