DEV-2 add team, player and game panels

--- a/src/stylesheets/general/global.styles.scss
+++ b/src/stylesheets/general/global.styles.scss
@@ -5,6 +5,12 @@
   text-decoration: none;
 }
 
+.text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .container-responsive {
   padding: 0 8px;
 
