--- a/src/app/pages/platform/feed/feed.component.html
+++ b/src/app/pages/platform/feed/feed.component.html
@@ -1,1 +1,10 @@
-<p>feed works!</p>
+<section class="feed-container">
+  <mat-accordion multi>
+    <!-- Teams -->
+    <app-teams-panel></app-teams-panel>
+    <!-- Players -->
+    <app-players-panel></app-players-panel>
+    <!-- Games -->
+    <app-games-panel></app-games-panel>
+  </mat-accordion>
+</section>
