--- a/src/app/components/platform/teams-panel/teams-panel.component.html
+++ b/src/app/components/platform/teams-panel/teams-panel.component.html
@@ -49,5 +49,7 @@
       </tr>
     </table>
   </section>
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  <mat-action-row>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </mat-action-row>
 </mat-expansion-panel>
