--- a/src/app/pages/platform/feed/feed.component.html
+++ b/src/app/pages/platform/feed/feed.component.html
@@ -2,9 +2,18 @@
   <mat-accordion multi>
     <!-- Teams -->
     <app-teams-panel></app-teams-panel>
+    <div class="action-button">
+      <a [routerLink]="['/teams', 'add']">Don't see your team? Add it here!</a>
+    </div>
     <!-- Players -->
     <app-players-panel></app-players-panel>
+    <div class="action-button">
+      <a [routerLink]="['/players', 'add']">Don't find a player? Add here!</a>
+    </div>
     <!-- Games -->
     <app-games-panel></app-games-panel>
+    <div class="action-button">
+      <a [routerLink]="['/games', 'add']">Don't find a game? Add it here! </a>
+    </div>
   </mat-accordion>
 </section>
