--- a/src/app/pages/platform/feed/feed.component.scss
+++ b/src/app/pages/platform/feed/feed.component.scss
@@ -1,3 +1,10 @@
 .feed-container {
   padding: 40px 0;
 }
+
+.action-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: end;
+}
