add info pages and routes

--- a/src/app/platform/pages/feed/feed.component.html
+++ b/src/app/platform/pages/feed/feed.component.html
@@ -3,17 +3,17 @@
     <!-- Teams -->
     <app-teams-panel></app-teams-panel>
     <div class="action-button">
-      <a [routerLink]="['/teams', 'add']">Don't see your team? Add it here!</a>
+      <a [routerLink]="['/team', 'add']">Don't see your team? Add it here!</a>
     </div>
     <!-- Players -->
     <app-players-panel></app-players-panel>
     <div class="action-button">
-      <a [routerLink]="['/players', 'add']">Don't find a player? Add here!</a>
+      <a [routerLink]="['/player', 'add']">Don't find a player? Add here!</a>
     </div>
     <!-- Games -->
     <app-games-panel></app-games-panel>
     <div class="action-button">
-      <a [routerLink]="['/games', 'add']">Don't find a game? Add it here! </a>
+      <a [routerLink]="['/game', 'add']">Don't find a game? Add it here! </a>
     </div>
   </mat-accordion>
 </section>
